[package]
edition = "2021"
name    = "camol_winreg-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
